panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__test_braced_initialisation_of_array_with_unknown_length_uses_array_in_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/test_braced_initialisation_of_array_with_unknown_length_uses_array_in_initialiser.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/test_braced_initialisation_of_array_with_unknown_length_uses_array_in_initialiser.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration error~2 `array<int; ∅>`
            (braced
               (sizeof (name error~2 `array<int; ∅>`))
               (lengthof (name error~2 `array<int; ∅>`)))))))

----- stderr -----
