panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__test_empty_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/test_empty_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/test_empty_array.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration empty_1~2 `array<int; 0>` ∅)
         (declaration empty_2~3 `array<int; 0>` (braced ∅))
         (declaration empty_3~4 `array<int; ∅>` (braced ∅))
         (hoisted-compound-literal compound_literal.5~6 `array<int; 0>`)
         (expression (compound-literal (declaration compound_literal.5~6 `array<int; 0>` (braced ∅))))
         (hoisted-compound-literal compound_literal.7~8 `array<long; ∅>`)
         (expression (compound-literal (declaration compound_literal.7~8 `array<long; ∅>` (braced ∅)))))))

----- stderr -----
