panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__test_excess_initialisers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/test_excess_initialisers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/test_excess_initialisers.c"
   (declaration static_int~0 `int`
      (braced
         1
         2))
   (declaration static_array~1 `array<int; 2>`
      (braced
         1
         2
         3))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration x~4 `int`
            (braced
               1
               2))
         (declaration xs~5 `array<int; 2>`
            (braced
               1
               2
               3
               4))
         (declaration ys~6 `array<array<int; 2>; 2>`
            (braced
               1
               2
               3
               4
               5))
         (declaration zs~7 `array<array<int; 2>; 3>`
            (braced
               (braced
                  1
                  2
                  3)
               (braced
                  4
                  5)))
         (declaration scalar_in_array_initialiser~8 `array<int; 2>`
            (braced
               1
               (braced
                  2
                  3)))
         (declaration nested_braces_in_first_initialiser~9 `array<int; 2>`
            (braced
               (braced
                  (braced
                     1
                     2))))
         (declaration multiline~10 `array<array<int; 2>; 3>`
            (braced
               (braced
                  1
                  2
                  3)
               (braced
                  4
                  5))))))

----- stderr -----
