panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__test_initialise_ineligible_array_with_unknown_length_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/test_initialise_ineligible_array_with_unknown_length_with_string_literal.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration abc~2 `array<short; ∅>` (string "abc"))
         (declaration xs~3 `array<int; ∅>` (string "abc"))
         (declaration ys~4 `array<int; ∅>`
            (braced
               (string "abc")))
         (declaration zs~5 `array<array<int; 100>; ∅>`
            (braced
               (string "abc")
               (braced
                  (string "d"))))
         (declaration ws~6 `array<array<int; 100>; ∅>`
            (braced
               (braced
                  (string "abc"))
               (braced
                  (string "d"))))
         (declaration multidimensional~7 `array<array<int; 4>; ∅>` (string "abc"))
         (declaration another_multidimensional~8 `array<array<int; 5>; ∅>`
            (braced
               (string "def"))))))

----- stderr -----
