panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__test_no_such_subobject_index.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/test_no_such_subobject_index.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/test_no_such_subobject_index.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int`
            (braced
               (designation ((index 0)) 42)))
         (declaration xs~3 `array<int; 2>`
            (braced
               (designation ((index 0) (index 0)) 42)))
         (declaration xss~4 `array<array<int; 2>; 2>`
            (braced
               (designation ((index 0) (index 0) (index 0)) 42))))))

----- stderr -----
